FIX: Patreon button UI alignment

--- a/assets/stylesheets/patreon.scss
+++ b/assets/stylesheets/patreon.scss
@@ -23,7 +23,7 @@
 .btn-social.patreon {
   background: #052D49 url(/plugins/discourse-patreon/images/patreon-logomark-color-on-navy.png) no-repeat;
   background-position-y: 8px;
-  background-position-x: 36px;
+  background-position-x: 30px;
   background-size: 16px;
   padding-left: 35px;
 }
